// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SideBarGroup when children provided renders children and title when title provided 1`] = `
<div>
  <div
    class="SideBarGroup-sidebarGroup-7"
  >
    <h6
      class="MuiTypography-root MuiTypography-h6 SideBarGroup-title-8 css-161uzub-MuiTypography-root"
    >
      Test Group
    </h6>
    <div>
      test div content
    </div>
  </div>
</div>
`;

exports[`SideBarGroup when children provided renders children when no title provided 1`] = `
<div>
  <div
    class="SideBarGroup-sidebarGroup-5"
  >
    <div>
      test div content
    </div>
  </div>
</div>
`;

exports[`SideBarGroup when no children provided renders nothing when no title provided 1`] = `<div />`;

exports[`SideBarGroup when no children provided renders nothing when title provided 1`] = `<div />`;
